# OracleDDLExporter

./: LICENSE  README.md  config.example.toml  ddl_export.py  oracle_ddl_exporter.py  pyproject.toml
