[tool.poetry]
name = "oracleddlexporter"
version = "0.1.0"
description = ""
authors = ["Masaaki Hashimoto <mh076144@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
toml = "^0.10.2"
oracledb = "^1.4.2"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
